Fix elements outline cut away by overflow.

--- a/resources/scss/public/_filters.scss
+++ b/resources/scss/public/_filters.scss
@@ -20,7 +20,6 @@
 
 .sf-filter {
 	margin-bottom: 24px;
-	overflow: hidden;
 
 	ul, li, p {
 		margin: 0;
@@ -62,6 +61,10 @@
 			svg {
 				transform: scale(1,-1);
 			}
+		}
+
+		&:hover {
+			background: none;
 		}
 
 		svg {
